Fix text wrapping across breakpoints.
We were asked to remove the line break between the copy inside the
accordian. The result of this was that the text wrapping didn't
quite look right. After chatting with Harry we decided to try and
wrap the text in line with the buttons. This change to the styling
attempts to match the copy width to the total width of buttons
across all breakpoints.

--- a/shared/css/_thrasher.scss
+++ b/shared/css/_thrasher.scss
@@ -52,7 +52,10 @@
           font-weight: bold;
         }
         @include mq(phablet) {
-          max-width: 550px;
+          max-width: 495px;
+        }
+        @include mq(tablet) {
+          max-width: 660px
         }
       }
       &__icon-container {
